# flatpal

./: .gitignore  README.md  flatpal.in  install.sh  io.github.hawwwran.flatpal.dev.yaml  io.github.hawwwran.flatpal.yaml  meson.build  run-tests.sh  uninstall.sh
data/: flatpal.desktop  io.github.hawwwran.flatpal.desktop  io.github.hawwwran.flatpal.metainfo.xml  meson.build
flatpal/: __main__.py  app.py  cache.py  catalog.py  constants.py  core.py  debuglog.py  detail.py  downgrade_runner.py  explore_data.py  explore_page.py  host.py  installed_page.py  meson.build  metainfo.py  navigator.py  no_enumerate.py  palette.py  permissions.py  popularity.py  release_notes.py  remote_log.py  row_cache.py  running.py  running_page.py  running_rows.py  screenshot_viewer.py  screenshots.py  search.py  settings.py  update_runner.py  updates.py  updates_page.py  widgets.py
tests/: README.md  test_cache.py  test_catalog.py  test_core.py  test_downgrade_runner.py  test_installed_enrich.py  test_meson_manifest.py  test_metainfo.py  test_navigator.py  test_permissions.py  test_popularity.py  test_remote_log.py  test_row_cache.py  test_running.py  test_search.py  test_settings.py  test_update_runner.py  test_updates.py  test_updates_page.py
tests/custom/: screenshot_demo.py
tests/fixtures/: gimp.metainfo.xml  signal.info-m.txt
tools/: preview_flathub.py  preview_metainfo.py
