python.install_sources(
  [
    '__init__.py',
    '__main__.py',
    'app.py',
    'cache.py',
    'catalog.py',
    'constants.py',
    'core.py',
    'debuglog.py',
    'detail.py',
    'explore_page.py',
    'host.py',
    'installed_page.py',
    'metainfo.py',
    'navigator.py',
    'permissions.py',
    'popularity.py',
    'running.py',
    'running_page.py',
    'screenshot_viewer.py',
    'search.py',
    'settings.py',
    'widgets.py',
  ],
  subdir: 'flatpal',
)
