python.install_sources(
  [
    '__init__.py',
    '__main__.py',
    'app.py',
    'cache.py',
    'catalog.py',
    'constants.py',
    'core.py',
    'debuglog.py',
    'detail.py',
    'explore_data.py',
    'explore_page.py',
    'host.py',
    'installed_page.py',
    'metainfo.py',
    'navigator.py',
    'no_enumerate.py',
    'palette.py',
    'permissions.py',
    'popularity.py',
    'release_notes.py',
    'row_cache.py',
    'running.py',
    'running_page.py',
    'running_rows.py',
    'screenshot_viewer.py',
    'screenshots.py',
    'search.py',
    'settings.py',
    'updates.py',
    'widgets.py',
  ],
  subdir: 'flatpal',
)
